--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "ABUserbot",
-  "description": "The best userbot made by @CyberBoyAyush. For Support Join @ABUserbot ",
-  "logo": "https://telegra.ph/file/7decf235312af8536e9aa.jpg ",
+  "description": "The best userbot made by @CyberBoyAyush. For Support Join @AyushBots ",
+  "logo": "https://telegra.ph/file/3783bd9bdde374797c704.jpg ",
     "keywords": [
     "telegram",
     "userbot",
